Added many data structures